fixed alignment of input items

--- a/packages/examples/example.css
+++ b/packages/examples/example.css
@@ -76,7 +76,7 @@ input {
 .horizontal-layout {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-start;
 }
 .horizontal-layout[hidden] {
   display: none;
@@ -318,4 +318,17 @@ jsonforms-tree > dialog > .content {
 .array-table-layout td > * {
   flex:1;
 }
-.control > .input-description {color: var(--jsf-description-color);}
+.control > .input-description {
+  color: var(--jsf-description-color);
+  margin: 0;
+  font-size: 0.75rem;
+  text-align: left;
+  margin-top: 8px;
+  min-height: 1em;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  line-height: 1em;
+  -webkit-margin-before: 1em;
+  -webkit-margin-after: 1em;
+  -webkit-margin-start: 0px;
+  -webkit-margin-end: 0px;
+}
